Обновление: добавлено фото

--- a/index.html
+++ b/index.html
@@ -27,19 +27,13 @@
             font-size: 3em;
             color: #ff69b4;
             text-shadow: 0 0 20px #ff69b4;
-            animation: glow 2s infinite;
-        }
-        @keyframes glow {
-            0% { text-shadow: 0 0 20px #ff69b4; }
-            50% { text-shadow: 0 0 40px #ff69b4; }
-            100% { text-shadow: 0 0 20px #ff69b4; }
         }
     </style>
 </head>
 <body>
 
-    <!-- Замени polina.jpg на своё фото -->
-    <img src="polina.jpg" alt="Полина">
+    <!-- ТВОЁ ФОТО -->
+    <img src="photo_2025-12-05_20-11-38.jpg" alt="Polina">
 
     <h1>Полина</h1>
 
